# chem-pdf-extractor

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  ShuJuTiQuJiaoBen.py  Start-Chem-PDF-Extractor.bat  YiJianQiDong.bat  config.example.json  constraints.txt  install_and_start.ps1  pyproject.toml  requirements-core.txt  requirements-mineru.txt  requirements.txt  run_chem_pdf_extractor.py
.github/: dependabot.yml  pull_request_template.md
chem_pdf_extractor/: __main__.py  app.py  config.py  diagnostics.py  entrypoint.py  export.py  extractor.py  llm.py  pdf.py  quality.py  security.py  server.py  text_safety.py
docs/: codex_for_oss_application_draft.md  configuration.md  evaluation.md  github_repository_text.md  project_status_and_roadmap.md  quickstart.md  release_and_feedback.md  release_note_v0.1.0.md  screenshot_guide.md  ui_layout_contract.md  use_case_catalysis_literature_extraction.md  windows_package.md  使用说明.md
examples/: README.md  sample_fields.json  sample_output.csv  sample_output.xlsx
release_package/: README.md
tests/: test_benchmark_cases.py  test_cloud_api_test_endpoint.py  test_cloud_base_url_security.py  test_cloud_config_profiles.py  test_cloud_config_safety.py  test_cloud_failure_pause_resume.py  test_cloud_model_selector_ui.py  test_cloud_provider_cli.py  test_cloud_structured_output_validation.py  test_compact_ui_guidance.py  test_demo_literature_batch.py  test_diagnostics_logging.py  test_docs_links.py  test_e2e_mock_workflow.py  test_english_entrypoints.py  (+23 more)
(+31 files in other folders)
