[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chem-pdf-extractor"
version = "0.1.2"
description = "Extract structured experimental data from scientific PDF papers for chemical engineering and related research."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "MeiYukun" }
]
keywords = ["pdf", "chemistry", "chemical-engineering", "llm", "literature-review", "data-extraction"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "pypdf>=4.0",
  "langchain>=0.2",
  "langchain-core>=0.2",
  "langchain-ollama>=0.1",
  "pydantic>=2.0",
  "pandas>=2.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
pdf = [
  "pymupdf4llm>=0.0.17",
  "pymupdf>=1.24",
]
test = ["pytest>=8"]

[tool.setuptools]
py-modules = ["ShuJuTiQuJiaoBen"]
